# spark_pubsub_connector

./: .gitignore  ARCHITECTURE.md  CLOUD_DEBUG_SUMMARY.md  DEVELOPMENT.md  LICENSE  OPERATIONS.md  PRD.md  ProtoArchitecturalGuidance.md  README.md  RESTART.md  ROADMAP.md  TROUBLESHOOTING.md  benchmark_log_latest.txt  cluster_config.json  error_log.txt  failed_log_0.txt  failed_log_2.txt  failed_log_3.txt  failed_log_fatjar.txt  full_driver_start.txt  job_log.txt  job_log_2.txt  job_log_3.txt  job_log_4.txt  job_log_4_failed.txt  job_log_active.txt  job_log_candidate_1.txt  job_log_candidate_2.txt  job_log_success_candidate.txt  job_log_try3.txt  job_log_try4.txt  jobs_list.txt  launch_v7.sh  raw_flags.txt  restart.md  run_ack_test.sh  run_custom_throughput.sh  run_custom_write_load.sh  run_dynamic_scaling_test.sh  run_emulator_tests.sh  (+6 more)
native/: Cargo.toml  metadata.json
native/examples/: simple_emulator_test.rs
native/src/: arrow_convert.rs  lib.rs  logging.rs  pubsub.rs
native/src/arrow_convert/: builder.rs  mod.rs  reader.rs
native/src/core/: client.rs  metrics.rs  mod.rs  runtime.rs
native/src/diagnostics/: logging.rs  mod.rs
native/src/schema/: builder.rs  mod.rs  reader.rs
native/src/sink/: mod.rs
native/src/source/: mod.rs
native/target_docker/: .rustc_info.json
native/target_docker/release/: libnative_pubsub_connector.d
native/target_docker/release/.fingerprint/Inflector-0060424132bb6747/: lib-inflector  lib-inflector.json
native/target_fix/: .rustc_info.json
native/target_fix/release/: libnative_pubsub_connector.d
(+1470 files in other folders)
